adjusted CSS spacing and fixed sizing issues for smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,6 @@ header nav ul li {
     display: inline-block;
     margin: 0 1em 0 1em;
     position: relative;
-    /* right: 2em; */
   } 
 
 header nav ul li a:hover {
@@ -116,7 +115,7 @@ section h2 {
     display: flex;
     flex-wrap: wrap;
     align-content: center;
-    font-size: 1.5em;
+    font-size: 1.1em;
    
 }
 
@@ -156,6 +155,7 @@ section h2 {
     padding: 0 0.5em 0 0;
     position: relative;
     right: 48px;
+    top: 25px;
 }
 
 .column > h3 {
@@ -205,8 +205,8 @@ a {
 }
 
 .LED, .calculator, .pastel, .run {
-    width: 49%;
-    height: 25vh;
+    width: 48.5%;
+    height: 20vh;
 }
 
 /* CONTENT - CONTACT */
@@ -229,12 +229,6 @@ a {
 }
 
 /* MEDIA QUERIES USING SEVERAL BREAKPOINTS */
-@media screen and (max-width: 1338px) {
-     .LED, .calculator, .pastel, .run {
-        width: 48%;
-        height: auto;
-    }
-}
 
 /* MAIN BREAKPOINT */
 
@@ -286,6 +280,10 @@ a {
        flex: 0 0 100%;
     }
 
+    .column {
+        font-size: 0.7em;
+    }
+
     .contact address {
         display: flex;
         flex-wrap: wrap;
@@ -300,6 +298,11 @@ a {
 /* FOR SMALLER SCREENS  */
 
 @media only screen and (max-width: 768px) {
+
+    header nav ul li {
+        margin: 0 0.2em 0 0.2em;
+    }
+
     .contact address {
       flex-direction: column;
     }
@@ -309,7 +312,8 @@ a {
     }
 
     #portrait { 
-        display: none;
+        width: 125px;
+        height: auto;
     }
 }
 
